Added basic page templates

--- a/src/TPXimpactHub.Web/appsettings.json
+++ b/src/TPXimpactHub.Web/appsettings.json
@@ -29,7 +29,7 @@
         }
       },
       "ModelsBuilder": {
-        "ModelsMode": "SourceCodeManual",
+        "ModelsMode": "SourceCodeAuto",
         "ModelsDirectory": "~/../TPXimpactHub.Core/Models/Content",
         "AcceptUnsafeModelsDirectory": true
       },
