--- a/src/tpximpacthub.mobile/package.json
+++ b/src/tpximpacthub.mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
+    "axios": "^1.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
